# fastapi-template

./: .cursorrules  .env.sample  .gitignore  CLIENTS.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_SETUP.md  README.md  SYSTEM_ARCHITECTURE.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-review.yml
alembic/: env.py
alembic/versions/: 028cb9174d75_create_users_table.py  5d55ccbe0a77_add_timestamps_to_users.py  a0a73963b412_add_max_limit_to_100_for_user_password.py
app/: main.py
app/agents/: rag_agent.py
app/api/: api_dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  documents.py  health.py  rag.py  users.py
app/clients/: __init__.py  base_client.py  constants.py
app/clients/embeddings/: __init__.py  openai_embedding_client.py
app/clients/llm/: __init__.py  openai_llm_client.py
app/clients/vector/: __init__.py  chroma_client.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: base.py  init_db.py  mongodb.py  session.py
app/middleware/: error_handler.py  logging.py
app/models/: user.py
app/models/mongo/: document.py
app/prompts/: __init__.py  extract_prompt.py
app/repositories/: base.py  mongo_repository.py  user_repository.py
app/schemas/: response.py  token.py  user.py
app/services/: auth_service.py  chunk_service.py  document_service.py  user_service.py  vector_service.py
app/utils/: agentic_chunker.py
docker/: Dockerfile  docker-compose-chroma.yml  docker-compose.yml
scripts/: create_superuser.py  init_db.py
tests/: __init__.py  test_basic.py
